Quorum/Library/Tests/TypeCheckerGenerated/Pass/RetAssignIntegerIntegerField.quorum
class Main
    integer v = Test()
    action Main
        if v = 5
            output "passed"
        end
    end

    action Test() returns integer
        integer var = 5
        return var
    end
end