Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextIntegerField.quorum
class Main
    text v = Test()
    action Main
    end

    action Test() returns text
        integer var = 5
        return var
    end
end